assignment_1/slurm.out/correctness_test_94475.out
rm -f obj/*.o *.x
rm -f *.pbm
rm -f snaps/*
mpicc -Iinclude -Wall -c -fopenmp -o obj/main.o main.c	
main.c: In function ‘main’:
main.c:86:24: error: too few arguments to function ‘run’
   86 |     if (action == RUN) run(fname, k, n, s, e);
      |                        ^~~
In file included from main.c:13:
include/run.h:3:10: note: declared here
    3 |     void run(const char *fname, unsigned const int k, unsigned const int n, unsigned int s, const char e, const int t);
      |          ^~~
make: *** [Makefile:16: obj/main.o] Error 1
--------------------------------------------------------------------------
mpirun was unable to launch the specified application as it could not access
or execute an executable:

Executable: ./main.x
Node: epyc001

while attempting to start process rank 0.
--------------------------------------------------------------------------
10 total processes failed to start
--------------------------------------------------------------------------
mpirun was unable to launch the specified application as it could not access
or execute an executable:

Executable: ./main.x
Node: epyc001

while attempting to start process rank 0.
--------------------------------------------------------------------------
10 total processes failed to start
